feature: resolved request changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<button class="btnAddCalc">+</button>
 		<div class="wrapper">
-			<div class="windowWithCalculators"></div>
+			<div class="container"></div>
 		</div>
 		<script src="app.js"></script>
 	</body>
